Variable icon size and text fix for spilly goose

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -302,6 +302,7 @@ p {
   margin-bottom: 2.2em;
   opacity: 0.65;
   line-height: 2.2em;
+  min-height: 4.4em;
   transition: opacity 0.4s ease;
 
   &--hidden {
@@ -502,6 +503,11 @@ p {
         }
       }
     }
+  }
+
+  .sg-corner-logo {
+    width: 64px;
+    height: 64px;
   }
 
   /* frame for itch.io game preview */
